<resources>
    <string name="app_name">Addic7edDownloader</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_fragment_shows">Shows</string>
    <string name="label_search">Search</string>
    <string name="title_fragment_favorites">Favorites</string>
    <string name="title_activity_preferences">Preferences</string>

    <string name="label_shows">Shows</string>
    <string name="title_navigation_search">Search</string>
    <string name="title_navigation_favorites">Favorites</string>
    <string name="title_menu_item_search">Search</string>
    <string name="title_menu_item_preferences">Preferences</string>

    <string name="write_external_storage_rationale">External storage permission is needed in order to download subtitles from Addic7ed</string>

    <!-- dialog -->
    <string name="dialog_action_ok">Ok</string>
    <string name="dialog_positive_button">Yes</string>
    <string name="dialog_negative_button">No</string>
    <string name="dialog_close_button">Close</string>

    <string name="label_subtitle_hd">720p/1080p</string>
    <string name="label_subtitle_hi">Hearing Impaired</string>
    <string name="label_subtitle_corrected">Corrected</string>

    <!-- notification -->
    <string name="key_notification_channel" translatable="false">addic7eddownloader_notification_channel</string>
    <string name="title_notification_subtitle_download">Subtitle file saved</string>
    <string name="msg_notification_subtitle_download">Downloaded file: %s</string>

    <string name="error_generic">An unexpected error occurred</string>
    <string name="error_default_load_addic7ed_shows">An unexpected error occurred while fetching data from Addic7ed</string>
    <string name="error_persist_episodes">Failed to locally save episodes</string>
    <string name="error_load_episodes">Failed to load seasonNumber episodes</string>
    <string name="error_persist_seasons">Failed to locally save tv show seasons</string>
    <string name="error_load_seasons">Failed to load tv show seasons</string>
    <string name="error_download_subtitle">Failed to download subtitle file</string>
    <string name="error_load_subtitles">Failed to load episode subtitles</string>
    <string name="error_persist_subtitles">Failed to locally save subtitles</string>
    <string name="error_persist_shows">Failed to locally save tv shows</string>
    <string name="error_load_shows">Failed to load tv shows</string>
    <string name="error_default_load_shows">An unexpected error occurred while loading tv shows</string>
    <string name="error_remove_show_favorites">Failed to remove show from favorites</string>
    <string name="error_add_show_favorites">Failed to add show to favorites</string>

    <!-- preferences -->
    <string name="title_pref_general">General</string>
    <string name="title_pref_subtitle_save_location">Save location</string>
    <string name="title_pref_category_subtitles">Subtitles</string>
    <string name="key_pref_subtitle_save_location" translatable="false">pref_subtitle_saving_location</string>

    <!-- show action menu -->
    <string name="label_action_menu_add_favorites">Add to favorites</string>
    <string name="label_action_menu_remove_favorites">Remove from favorites</string>
    <string name="msg_success_add_favorites">Show added to favorites</string>
    <string name="msg_success_remove_favorites">Show removed from favorites</string>

    <string name="hint_filter_shows">Filter Shows</string>
    <string name="hint_filter_favorites">Filter favorites</string>

    <string name="title_pref_category_general">General</string>
    <string name="key_pref_general_default_screen" translatable="false">pref_general_default_screen</string>
    <string name="title_pref_general_default_screen">Default screen</string>
    <string name="msg_empty_favorites">No favorite shows to display</string>
    <string name="msg_empty_shows">No shows to display</string>
    <string name="label_delete">Delete</string>
    <string name="msg_delete_favorite">Do you want to remove this show from your favorites?</string>
    <string name="hint_search_field">Search Addic7ed</string>
    <string name="label_search_helper">Search like you would on Addic7ed</string>
    <string name="error_search_addic7ed">Failed to search Addic7ed</string>
    <string name="label_search_no_results">No results</string>
    <string name="label_show">Show</string>
    <string name="label_movie">Movie</string>
</resources>
