<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TVShowSubtitlesActivity">

    <LinearLayout
        android:id="@+id/layoutLegend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/legend_imgHD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tint="@color/colorMaterialGray900"
            app:srcCompat="@drawable/ic_hd_black_24dp" />

        <TextView
            android:id="@+id/legend_label_txtHD"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_subtitle_hd" />

        <ImageView
            android:id="@+id/legend_imgHI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tint="@color/colorMaterialIndigoA200"
            app:srcCompat="@drawable/ic_hearing_black_24dp" />

        <TextView
            android:id="@+id/legend_label_txtHi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_subtitle_hi" />

        <ImageView
            android:id="@+id/legend_imgCorrected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tint="@color/colorMaterialGreenA700"
            app:srcCompat="@drawable/ic_check_circle_black_24dp" />

        <TextView
            android:id="@+id/legend_label_txtCorrected"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_subtitle_corrected" />

    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorMaterialGray300"
        app:layout_constraintBottom_toTopOf="@+id/layoutLegend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/activity_episode_subtitles_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/activity_episode_substitles_listSubtitles"
        app:layout_constraintTop_toTopOf="@+id/activity_episode_substitles_listSubtitles" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_episode_substitles_listSubtitles"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>