<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.SubtitlesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/activity_episode_subtitles_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@+id/activity_episode_substitles_listSubtitles"
            app:layout_constraintTop_toTopOf="@+id/activity_episode_substitles_listSubtitles" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_episode_substitles_listSubtitles"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layoutLegend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:elevation="10dp"
        app:layout_behavior="com.jomifepe.addic7eddownloader.ui.behavior.HideBottomViewOnScrollBehavior"
        android:clickable="true"
        android:focusable="true">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorMaterialGray100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/legend_imgHD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tint="@color/colorMaterialGray900"
                app:srcCompat="@drawable/ic_hd_black_24dp" />

            <TextView
                android:id="@+id/legend_label_txtHD"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_subtitle_hd" />

            <ImageView
                android:id="@+id/legend_imgHI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tint="@color/colorMaterialIndigoA200"
                app:srcCompat="@drawable/ic_hearing_black_24dp" />

            <TextView
                android:id="@+id/legend_label_txtHi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_subtitle_hi" />

            <ImageView
                android:id="@+id/legend_imgCorrected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tint="@color/colorMaterialGreenA700"
                app:srcCompat="@drawable/ic_check_circle_black_24dp" />

            <TextView
                android:id="@+id/legend_label_txtCorrected"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_subtitle_corrected" />

        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>